Extract deployed SCEX player updater into standalone fork